--- a/.github/workflows/my-test-workflow.yaml
+++ b/.github/workflows/my-test-workflow.yaml
@@ -10,7 +10,7 @@ on:
 
   env:
     ACTION_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    OTEL_EXPORTER_OTLP_ENDPOINT: https://abc12345.live.dynatrace.com/api/v2/otlp/
+    OTEL_EXPORTER_OTLP_ENDPOINT: https://xnj93051.live.dynatrace.com/api/v2/otlp/
     OTLP_PROTOCOL: HTTP
     WORKFLOW_RUN_ID: ${{ github.event.workflow_run.id }}
     WORKFLOW_RUN_NAME: ${{ github.event.workflow_run.name }}
