--- a/.github/workflows/my-test-workflow.yaml
+++ b/.github/workflows/my-test-workflow.yaml
@@ -40,3 +40,6 @@ jobs:
       
       - name: Run tests
         run: npm test
+      
+      - name: Run OTLP GitHubAction Exporter
+        uses: StephenGoodall/OTLP-GitHubAction-Exporter@v3
