--- a/.github/workflows/my-test-workflow.yaml
+++ b/.github/workflows/my-test-workflow.yaml
@@ -35,11 +35,11 @@ jobs:
         with:
           node-version: '18'
         
-      - name: Install dependencies
-        run: npm install
+ #     - name: Install dependencies
+ #       run: npm install
       
-      - name: Run tests
-        run: npm test
+ #     - name: Run tests
+ #       run: npm test
       
       - name: Run OTLP GitHubAction Exporter
         uses: StephenGoodall/OTLP-GitHubAction-Exporter@v3
