Making changes to  my-test-workflow.yaml to trigger otel workflow

--- a/.github/workflows/my-test-workflow.yaml
+++ b/.github/workflows/my-test-workflow.yaml
@@ -1,6 +1,7 @@
 name: CI Pipeline with otel tracing
 
 # Define when the workflow runs
+# making some changes to trigger workflow
 on:
   workflow_run:
     workflows: ['*']
