--- a/.github/workflows/otel-workflow.yaml
+++ b/.github/workflows/otel-workflow.yaml
@@ -28,8 +28,8 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ always() }}
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+#      - name: Checkout code
+#        uses: actions/checkout@v4
       
 #      - name: Setup Node.js
 #        uses: actions/setup-node@v4
