--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,8 @@
 name: Node.js CI
 
-on: [push, pull_request]
-
+# on: [push, pull_request]
+on: 
+  workflow_dispatch:
 jobs:
   test:
     runs-on: ubuntu-latest
