Update otel-workflow.yaml to trigger otel only when a workflow is running

--- a/.github/workflows/otel-workflow.yaml
+++ b/.github/workflows/otel-workflow.yaml
@@ -6,10 +6,10 @@ on:
   workflow_run:
     workflows: ['*']
     types: [completed]
-  push:
-    branches: [ main, develop ]
-  pull_request:
-    branches: [ main ]
+#  push:
+#    branches: [ main, develop ]
+#  pull_request:
+#    branches: [ main ]
 
 permissions: read-all
 
